Fix horizontal scroll

--- a/css/main.css
+++ b/css/main.css
@@ -363,6 +363,7 @@ textarea {
 body {
   font-family: "Red Hat Display", sans-serif;
   font-weight: medium;
+  overflow-x: hidden;
 }
 
 .page-wrapper {
