--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -12,6 +12,7 @@ $gray: hsl(240, 10%, 57%);
 body {
   font-family: "Red Hat Display", sans-serif;
   font-weight: medium;
+  overflow-x: hidden;
 }
 
 // layout
